[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["PawlakMarek <26022173+PawlakMarek@users.noreply.github.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PawlakMarek/hypermodern-python"
repository = "https://github.com/PawlakMarek/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
